// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: group 1`] = `
<div
  className="display-flex-center permission-list-item padded"
>
  <GroupIcon
    className="pull-left spacer-right"
    size={32}
  />
  <div
    className="overflow-hidden flex-1"
  >
    <strong>
      groupname
    </strong>
  </div>
  <DeleteButton
    onClick={[Function]}
  />
</div>
`;

exports[`should render correctly: user 1`] = `
<div
  className="display-flex-center permission-list-item padded"
>
  <withAppStateContext(Avatar)
    className="spacer-right"
    name="John Doe"
    size={32}
  />
  <div
    className="overflow-hidden flex-1"
  >
    <strong>
      John Doe
    </strong>
    <div
      className="note"
    >
      john.doe
    </div>
  </div>
  <DeleteButton
    onClick={[Function]}
  />
</div>
`;
